# XDP

./: .env  .gitignore  pyproject.toml
script/: 01_create_adata.ipynb  02_labelling_MapMyCells.ipynb
script/R_conversion/: 01_format_h5ad.py  02_convert_to_R.R  ArtificialBican_qs_conversion.ipynb  NucSeq_qs_conversion.ipynb  general_case.R  general_case.ipynb  merge_original_NucSeq.ipynb
script/artificial_DEG_analysis/: Desq2.ipynb  SV_analysis.ipynb  cPCA_analysis.ipynb  dorsal-ventral-score_analysis.ipynb  doubleOT.ipynb
script/multi_sample_analysis/: 07_SlideTag_dataset_Merge.ipynb  DEG_zones_by_ct.ipynb  cinema_OT.ipynb
script/single_sample_analysis/: 00_prepare_folders.py  01_create_adata.ipynb  02_labelling_MapMyCells.ipynb  03_data_exploration.ipynb  05_zone_labelling.ipynb  07_DEG_zones_analysis.ipynb
script/single_sample_analysis-Slide_tag/: 00_prepare_folders.py  01_create_adata.ipynb  02_labelling_MapMyCells.ipynb
script/single_sample_analysis-Slide_tag/special/: build_BICAN.ipynb  build_recon_241105_from_R.ipynb
utils/: DEG.py  preprocessing.py
utils/STR_cell_types_annotation/: group_level_mmc_mapping.json  run_mapmycells_zones.sh
utils/dorsal_ventral_gradient/: exp_by_spline_combined.csv  exp_by_spline_combined_corr>0.1.csv  exp_by_spline_combined_corr>0.2.csv  exp_by_spline_combined_corr>0.3.csv
utils/nebula_scripts/: chunk-sobj-by-genes.R  run-nebula-parallel.sh  run-nebula.R
