[project]
name = "xdp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "abc-atlas-access[notebooks]",
    "anndata2ri>=2.0",
    "cell-type-mapper",
    "cupy-cuda12x>=13.6.0",
    "diptest>=0.10.0",
    "dotenv>=0.9.9",
    "gseapy>=1.1.11",
    "igraph>=1.0.0",
    "ipynbname>=2025.8.0.0",
    "ipywidgets>=8.1.8",
    "leidenalg>=0.11.0",
    "probreg>=0.3.8",
    "pycpd>=2.0.0",
    "rpy2>=3.6.4",
    "scanpy>=1.11.5",
    "scikit-misc>=0.5.2",
    "scrublet>=0.2.3",
    "scvi-tools>=1.4.0.post1",
    "spatialde>=1.1.3",
    "squidpy>=1.7.0",
    "upsetplot>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.uv.sources]
cell-type-mapper = { git = "https://github.com/alleninstitute/cell_type_mapper.git", rev = "rc/v1.5.2" }
abc-atlas-access = { git = "https://github.com/alleninstitute/abc_atlas_access.git" }




# Manually added
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils"]

[tool.setuptools.package-dir]
# This tells setuptools where to find the packages (current directory)
"" = "."






